tests/baselines/reference/unicodeExtendedEscapesInTemplates19_ES5.errors.txt
unicodeExtendedEscapesInTemplates19_ES5.ts(1,13): error TS1125: Hexadecimal digit expected.


==== unicodeExtendedEscapesInTemplates19_ES5.ts (1 errors) ====
    var x = `\u{}`;
                
!!! error TS1125: Hexadecimal digit expected.
    